syntax = "proto3";
import "validate/validate.proto";

package IVDCT.DIAG.FUEL;

message Fuel {	// 연료 정보
	optional uint64 economy_ct = 1 [(validate.rules).uint64 = {gte: 0, lte: 18446744073709551615}]; // 연비 수집시간(Unit:1[ms], 0..(2^64-1))
	optional uint32 economy = 2 [(validate.rules).uint32 = {gte: 0, lte: 64257}]; 									// 연비(Unit:1/512[km/L], Over:64256(125.5) ,Unavaiable:64257);
}
